--- a/src/app/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
+++ b/src/app/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
@@ -1,25 +1,28 @@
-<div cdkDropListGroup>
-  <div class="example-container">
-    <h2>To do</h2>
+<div class="example-container">
+  <h2>To do</h2>
 
-    <div
-      cdkDropList
-      [cdkDropListData]="todo"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
-    </div>
+  <div
+    cdkDropList
+    [cdkDropListData]="todo"
+    [cdkDropListConnectedTo]="[doneList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+  >
+    <div class="example-box" *ngFor="let item of todo" cdkDrag>{{ item }}</div>
   </div>
+</div>
 
-  <div class="example-container">
-    <h2>Done</h2>
+<div class="example-container">
+  <h2>Done</h2>
 
-    <div
-      cdkDropList
-      [cdkDropListData]="done"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
-    </div>
+  <div
+    cdkDropList
+    #doneList="cdkDropList"
+    [cdkDropListData]="done"
+    [cdkDropListConnectedTo]="[todoList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+  >
+    <div class="example-box" *ngFor="let item of done" cdkDrag>{{ item }}</div>
   </div>
 </div>
