--- a/src/app/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
+++ b/src/app/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="example-container">
   <h2>To do</h2>
 
@@ -19,7 +21,7 @@
     cdkDropList
     #doneList="cdkDropList"
     [cdkDropListData]="done"
-    [cdkDropListConnectedTo]="[todoList]"
+    [cdkDropListConnectedTo]="[doneList]"
     class="example-list"
     (cdkDropListDropped)="drop($event)"
   >
