drag drop finished!

--- a/src/app/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
+++ b/src/app/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
@@ -5,6 +5,7 @@
 
   <div
     cdkDropList
+    #todoList="cdkDropList"
     [cdkDropListData]="todo"
     [cdkDropListConnectedTo]="[doneList]"
     class="example-list"
@@ -21,7 +22,7 @@
     cdkDropList
     #doneList="cdkDropList"
     [cdkDropListData]="done"
-    [cdkDropListConnectedTo]="[doneList]"
+    [cdkDropListConnectedTo]="[todoList]"
     class="example-list"
     (cdkDropListDropped)="drop($event)"
   >
