顯示在首頁

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
   <app-cdk-drag-drop-connected-sorting-example-comp></app-cdk-drag-drop-connected-sorting-example-comp>
 
+  <app-cool-job></app-cool-job>
 
