限定one最多只能5個

--- a/src/app/cool-job/cool-job.component.html
+++ b/src/app/cool-job/cool-job.component.html
@@ -10,6 +10,7 @@
       #oneList="cdkDropList"
       [cdkDropListData]="one"
       [cdkDropListConnectedTo]="[threeList,twoList]"
+      [cdkDropListEnterPredicate]="todoPredicate"
 
       class="coolJob-list"
       (cdkDropListDropped)="drop($event)">
