--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-
-  <app-cdk-drag-drop-connected-sorting-example-comp></app-cdk-drag-drop-connected-sorting-example-comp>
-
-  <app-cool-job></app-cool-job>
+  <app-cool-job></app-cool-job> <br>
 
   <app-simple-drag></app-simple-drag>
 
