--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,39 @@
-  <app-cool-job></app-cool-job> <br>
+<header
+  class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
+>
+  <div class="container">
+    <a
+      href="/"
+      class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
+    >
+      <img
+        src="../assets/images/icon.svg"
+        class="me-2"
+        width="40"
+        height="32"
+        alt=""
+      />
+      <p class="icon_text">潮SCRUM</p>
+    </a>
+  </div>
+</header>
 
-  <app-simple-drag></app-simple-drag>
+<div class="container">
+  <div class="step2_testArea mx-5 px-4 pt-4 my-5 border-bottom">
+    <p class="mb-3">產品待辦清單排排看！</p>
+    <p class="mb-3">尊榮旅遊社即將推行線上下單業務，優化線上下單系統以利促銷業務順利進行是首要考量！請將正確的優先序拖曳至框框裡！</p>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+      </div>
+    </div>
+    <div class="overflow-hidden" style="max-height: 30vh;">
+    </div>
+  </div>
+</div>
 
+<app-cool-job></app-cool-job> <br />
+
+<app-simple-drag></app-simple-drag>
