--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/scss/reset";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  background-image: url(../src/assets/images/background_design.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
