--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header
+<!-- <header
   class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
 >
   <div class="container">
@@ -36,4 +36,9 @@
 
 <app-cool-job></app-cool-job> <br />
 
-<app-simple-drag></app-simple-drag>
+<app-simple-drag></app-simple-drag> -->
+
+<app-header></app-header>
+
+<router-outlet></router-outlet>
+
