--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,8 @@
-<div class="navbar">
-    <a href="#" clsss="btn">回首頁</a>
-    <p>再把nav放到這裡喔！</p>
-</div>
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+  <div class="container">
+    <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+      <img src="../assets/images/icon.svg" class="me-2" style="height: 4rem" alt="" />
+      <p class="icon_text">潮SCRUM</p>
+    </a>
+  </div>
+</header>
