--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,7 @@
-<!-- <header
-  class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3"
->
-  <div class="container">
-    <a
-      href="/"
-      class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
-    >
-      <img
-        src="../assets/images/icon.svg"
-        class="me-2"
-        style="height: 4rem;"
-        alt=""
-      />
-      <p class="icon_text">潮SCRUM</p>
-    </a>
-  </div>
-</header>
+<!-- <app-header></app-header> -->
 
-<div class="container">
+<app-cover-page></app-cover-page>
+<!-- <div class="container">
   <div class="step2_testArea mx-5 px-4 py-4 my-5">
     <p class="mb-3">產品待辦清單排排看！</p>
     <p class="mb-5">
@@ -50,21 +34,16 @@
         </div>
       </div>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <!-- <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
+        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
           Primary button
-        </button> -->
+        </button>
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">
           送出答案
         </button>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <app-cool-job></app-cool-job> <br />
+  <!-- <app-cool-job></app-cool-job> -->
 
-<app-simple-drag></app-simple-drag>
-
-
-<app-header></app-header>
-
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
