--- a/src/app/cover-page/cover-page.component.html
+++ b/src/app/cover-page/cover-page.component.html
@@ -1,1 +1,18 @@
-<p>cover-page works!</p>
+
+<div class="container">
+  <div class="row align-items-md-stretch mt-5">
+      <div class="col-md-6">
+        <div class="">
+          大衛動畫放在這
+          <!-- 大衛動畫放在這 -->
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="h-100 p-5 bg-light mt-5">
+          <p>潮SCRUM</p>
+          <p>SCRUM是什麼？能吃嗎？</p>
+          <button class="btn-round" type="button">立馬搞懂</button>
+        </div>
+      </div>
+    </div>
+  </div>
