--- a/src/app/cover-page/cover-page.component.html
+++ b/src/app/cover-page/cover-page.component.html
@@ -11,7 +11,8 @@
         <div class="h-100 p-5 bg-light mt-5">
           <p>潮SCRUM</p>
           <p>SCRUM是什麼？能吃嗎？</p>
-          <button class="btn-round" type="button">立馬搞懂</button>
+          <button routerLink="/intro" class="btn-round" type="button">立馬搞懂</button>
+
         </div>
       </div>
     </div>
