1124 cover-page updated

--- a/src/app/cover-page/cover-page.component.html
+++ b/src/app/cover-page/cover-page.component.html
@@ -1,17 +1,17 @@
 
-<div class="container">
-  <div class="row align-items-md-stretch mt-5">
-      <div class="col-md-6">
+<div class="container cover_txt_wrap">
+  <div class="row align-items-md-stretch">
+      <div class="col-md-6 cover_txt_wrap-left">
         <div class="">
           大衛動畫放在這
           <!-- 大衛動畫放在這 -->
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="h-100 p-5 bg-light mt-5">
-          <p>潮SCRUM</p>
-          <p>SCRUM是什麼？能吃嗎？</p>
-          <button class="btn-round" type="button">立馬搞懂</button>
+      <div class="col-md-6 cover_txt_wrap-right">
+        <div class="h-100 p-5">
+          <p class="mb-3">潮SCRUM</p>
+          <p class="mb-3">SCRUM是什麼？能吃嗎？</p>
+          <div class="btn btn-round" type="button">立馬搞懂</div>
         </div>
       </div>
     </div>
