--- a/src/app/cover-page/cover-page.component.scss
+++ b/src/app/cover-page/cover-page.component.scss
@@ -1,23 +1,38 @@
 .cover_txt_wrap {
-  padding-top: 5rem;
+  margin-top: 20%;
+  .cover_txt_wrap-right {
+    margin-top: 9.25rem;
+    color: #59597c;
 
-  p:nth-child(1) {
+    p:nth-child(1) {
+      font-family: "M PLUS Rounded 1c";
+      font-weight: 700;
+      font-size: 3.5rem;
+      line-height: 40px;
+    }
 
-  }
+    p:nth-child(2) {
+      font-family: "Noto Sans TC";
+      font-weight: 300;
+      font-size: 2rem;
+      line-height: 46px;
+    }
 
-  p:nth-child(2) {
-
-  }
-
-  .btn-round {
-    font-size: 1rem;
-    margin-top: 1.5rem;
-    padding: 16px 60px;
-    gap: 10px;
-    background: radial-gradient(104.16% 106.67% at 50% 0%,
+    .btn-round {
+      box-shadow: 0px 4px 8px rgba(255, 115, 0, 0.28);
+      border-radius: 100px;
+      padding: 16px 60px;
+      background: radial-gradient(
+        104.16% 106.67% at 50% 0%,
         #fe9b4b 0%,
-        #f47814 100%);
-    box-shadow: 0px 4px 8px rgba(255, 115, 0, 0.28);
-    border-radius: 100px;
+        #f47814 100%
+      );
+
+      font-size: 20px;
+      font-family: "Noto Sans TC";
+      font-weight: 700;
+      letter-spacing: 4px;
+      color: #ffffff;
+    }
   }
 }
