cover page 增加 link

--- a/src/app/cover-page/cover-page.component.html
+++ b/src/app/cover-page/cover-page.component.html
@@ -11,7 +11,7 @@
         <div class="h-100 p-5">
           <p class="mb-3">潮SCRUM</p>
           <p class="mb-3">SCRUM是什麼？能吃嗎？</p>
-          <div class="btn btn-round" type="button">立馬搞懂</div>
+          <div routerLink="/intro" class="btn btn-round" type="button">立馬搞懂</div>
         </div>
       </div>
     </div>
