--- a/src/app/cover-page/cover-page.component.html
+++ b/src/app/cover-page/cover-page.component.html
@@ -2,7 +2,7 @@
 <div class="container cover_txt_wrap">
   <div class="row align-items-md-stretch">
       <div class="col-md-6 cover_txt_wrap-left">
-        <div class="">
+        <div class="h-100 p-5">
           大衛動畫放在這
           <!-- 大衛動畫放在這 -->
         </div>
@@ -11,7 +11,7 @@
         <div class="h-100 p-5">
           <p class="mb-3">潮SCRUM</p>
           <p class="mb-3">SCRUM是什麼？能吃嗎？</p>
-          <div class="btn btn-round" type="button">立馬搞懂</div>
+          <div routerLink="/intro" class="btn btn-round" type="button">立馬搞懂</div>
         </div>
       </div>
     </div>
