--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -2,7 +2,7 @@
 <h2>下面是暫時測試的</h2>
 
 
-<!-- <div class="container">
+<div class="container">
     <div class="step2_testArea mx-5 px-4 py-4 my-5">
         <p class="mb-3">產品待辦清單排排看！</p>
         <p class="mb-5">
@@ -44,6 +44,6 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
 
 <app-cool-job></app-cool-job>
