--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 $font: "Noto Sans TC";
 $font_nav: "M PLUS Rounded 1c",  sans-serif;
 
-.step2_testArea {
+.testArea {
   background: rgba(255, 255, 255, 0.8);
   box-shadow: 0px 15px 25px rgba(45, 156, 219, 0.16);
   font-family: "Noto Sans TC";
