--- a/src/app/page7-the-end/page7-the-end.component.html
+++ b/src/app/page7-the-end/page7-the-end.component.html
@@ -1,2 +1,22 @@
+<!-- 以下測試內容 -->
 <p>page7-the-end works!</p>
 <button routerLink="/intro" class="btn-round" type="button">再玩一次</button>
+<!-- 測試內容end -->
+<!-- 以下正式內容 -->
+<div class="container cover_txt_wrap">
+  <div class="row align-items-md-stretch">
+      <div class="col-md-6 cover_txt_wrap-left">
+        <div class="h-100 p-5">
+          大衛動畫放在這
+          <!-- 大衛動畫放在這 -->
+        </div>
+      </div>
+      <div class="col-md-6 cover_txt_wrap-right">
+        <div class="h-100">
+          <p class="mb-3">恭喜你也熟 SCRUM 了 </p>
+          <p class="mb-3">下次老闆問的時候請說我超熟！</p>
+          <button routerLink="/" class="btn btn-round" type="button">再玩一次</button>
+        </div>
+      </div>
+    </div>
+  </div>
