--- a/src/app/page5-retro/page5-retro.component.html
+++ b/src/app/page5-retro/page5-retro.component.html
@@ -1,2 +1,58 @@
+<!-- 以下測試內容 -->
 <p>page5-retro works!</p>
-<button routerLink="/retro-game" class="btn-round" type="button">驗收觀念</button>
+<button routerLink="/retro-game" class="btn-round" type="button">
+  驗收觀念
+</button>
+
+<!-- 測試內容end -->
+
+<!-- 以下正式內容 -->
+<div class="container">
+  <div class="mainArea mx-5 my-5 px-4 py-4">
+    <p class="mb-3">Retrospective Meeting 的精神！</p>
+    <p class="mb-4" >
+      很重要的就是要「正面表述」，終極目標是為了讓下一次 sprint 能夠更順利進行、延續好的協作方式與默契！
+    </p>
+    <div class="mb-5">
+      <p class="mb-3">參與人員</p>
+      <div class="row participant_card_wrap px-4">
+        <div class="col mx-4 d-flex">
+          <img src="/assets/images/peer_icon.svg" alt="" />
+          <div class="text_wrap">
+            <p>Product Owner</p>
+            <p>產品經理、總負責人</p>
+          </div>
+        </div>
+        <div class="col mx-4 d-flex">
+          <img src="/assets/images/peer_icon.svg" alt="" />
+          <div class="text_wrap">
+            <p>Scrum Master</p>
+            <p>實踐 Scrum 流程的總教練</p>
+          </div>
+        </div>
+        <div class="col mx-4 d-flex">
+          <img src="/assets/images/peer_icon.svg" alt="" />
+          <div class="text_wrap">
+            <p>Development Team</p>
+            <p>開發人員、設計、QA 等執行人員</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <div class="mb-5">
+    <p class="mb-3">推薦工具</p>
+    <div class="col d-flex justify-content-center">
+      <img src="/assets/images/confluence.svg" alt="">
+    </div>
+
+  </div>
+
+
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+      <button type="button" class="btn btn-outline-secondary px-4">
+        驗收觀念
+      </button>
+    </div>
+  </div>
+</div>
