--- a/src/app/page2-week-flow/page2-week-flow.component.scss
+++ b/src/app/page2-week-flow/page2-week-flow.component.scss
@@ -45,17 +45,33 @@
 
 
   .fttingArea{
+    width: 16%;
+    min-width: 100px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+    p{
+      font-size: 0.85rem;
+      margin-bottom: 2px;
+    }
 
 
     div{
-        min-width: 16%;
-        min-height: 60px;
+        width: 100%;
+        min-height:3rem ;
+        height:inherit ;
         overflow: hidden;
         display: block;
+        margin-bottom: 8px;
     }
 }
 
 
 .week-wrap{
     display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
