--- a/src/app/cool-job/cool-job.component.scss
+++ b/src/app/cool-job/cool-job.component.scss
@@ -9,7 +9,7 @@
     display: inline-block;
     vertical-align: top;
   }
-  
+
   .coolJob-list {
     border: solid 1px #ccc;
     min-height: 60px;
@@ -18,7 +18,7 @@
     overflow: hidden;
     display: block;
   }
-  
+
   .coolJob-box {
     padding: 20px 10px;
     border-bottom: solid 1px #ccc;
@@ -32,7 +32,7 @@
     background: white;
     font-size: 14px;
   }
-  
+
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
@@ -40,20 +40,48 @@
                 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   }
-  
+
   .cdk-drag-placeholder {
     opacity: 0;
   }
-  
+
   .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+
   .coolJob-box:last-child {
     border: none;
   }
-  
+
   .coolJob-list.cdk-drop-list-dragging .coolJob-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+
+
+p {
+  font-family: Lato;
+}
+
+.modal {
+  position: relative;
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 3px;
+  z-index: 999;
+
+  .modal__close {
+      position: absolute;
+      top: -8px;
+      right: -8px;
+      width: 20px;
+      height: 20px;
+      font-style: normal;
+      background: #fff;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 20px;
+      cursor: pointer;
+      box-shadow: 0px 0px 2px 2px #999;
+    }
+}
+
