page2 可以照規則玩了 剩下CSS

--- a/src/app/page2-week-flow/page2-week-flow.component.html
+++ b/src/app/page2-week-flow/page2-week-flow.component.html
@@ -13,7 +13,7 @@
                 <p>Monday</p>
 
                 <div cdkDropList #oneList="cdkDropList" [cdkDropListData]="one"
-                    [cdkDropListConnectedTo]="[AllInList,twoList]" [cdkDropListEnterPredicate]="OnePredicate"
+                    [cdkDropListConnectedTo]="[AllInList,oneList,twoList,threeList,fourList,fiveList,sixList]" [cdkDropListEnterPredicate]="OnePredicate"
                     class="coolJob-list " (cdkDropListDropped)="drop($event)">
                     <div class="coolJob-box" *ngFor="let item of one" cdkDrag>
                         <h3>{{item.title}}</h3>
@@ -26,7 +26,7 @@
                 <p>Tuesday</p>
 
                 <div cdkDropList #twoList="cdkDropList" [cdkDropListData]="two"
-                    [cdkDropListConnectedTo]="[oneList,AllInList]" [cdkDropListEnterPredicate]="TwoPredicate"
+                    [cdkDropListConnectedTo]="[AllInList,oneList,twoList,threeList,fourList,fiveList,sixList]" [cdkDropListEnterPredicate]="TwoPredicate"
                     class="coolJob-list" (cdkDropListDropped)="drop($event)">
                     <div class="coolJob-box" *ngFor="let item of two" cdkDrag> <h3>{{item.title}}</h3>
                         <p>{{item.content}}</p></div>
@@ -36,10 +36,10 @@
             <div class="fttingArea">
                 <p>Wednesday</p>
 
-                <div cdkDropList #twoList="cdkDropList" [cdkDropListData]="two"
-                    [cdkDropListConnectedTo]="[oneList,AllInList]" [cdkDropListEnterPredicate]="TwoPredicate"
+                <div cdkDropList #threeList="cdkDropList" [cdkDropListData]="three"
+                    [cdkDropListConnectedTo]="[AllInList,oneList,twoList,threeList,fourList,fiveList,sixList]" [cdkDropListEnterPredicate]="ThreePredicate"
                     class="coolJob-list" (cdkDropListDropped)="drop($event)">
-                    <div class="coolJob-box" *ngFor="let item of two" cdkDrag> <h3>{{item.title}}</h3>
+                    <div class="coolJob-box" *ngFor="let item of three" cdkDrag> <h3>{{item.title}}</h3>
                         <p>{{item.content}}</p></div>
                 </div>
             </div>
@@ -47,26 +47,26 @@
             <div class="fttingArea">
                 <p>Thursday</p>
 
-                <div cdkDropList #twoList="cdkDropList" [cdkDropListData]="two"
-                    [cdkDropListConnectedTo]="[oneList,AllInList]" [cdkDropListEnterPredicate]="TwoPredicate"
+                <div cdkDropList #fourList="cdkDropList" [cdkDropListData]="four"
+                    [cdkDropListConnectedTo]="[AllInList,oneList,twoList,threeList,fourList,fiveList,sixList]" [cdkDropListEnterPredicate]="FourPredicate"
                     class="coolJob-list" (cdkDropListDropped)="drop($event)">
-                    <div class="coolJob-box" *ngFor="let item of two" cdkDrag> <h3>{{item.title}}</h3>
+                    <div class="coolJob-box" *ngFor="let item of four" cdkDrag> <h3>{{item.title}}</h3>
                         <p>{{item.content}}</p></div>
                 </div>
             </div>
             <div class="fttingArea">
                 <p>Friday</p> 
 
-                <div cdkDropList #twoList="cdkDropList" [cdkDropListData]="two"
-                    [cdkDropListConnectedTo]="[oneList,AllInList]" [cdkDropListEnterPredicate]="TwoPredicate"
+                <div cdkDropList #fiveList="cdkDropList" [cdkDropListData]="five"
+                    [cdkDropListConnectedTo]="[AllInList,oneList,twoList,threeList,fourList,fiveList,sixList]" [cdkDropListEnterPredicate]="FivePredicate"
                     class="coolJob-list" (cdkDropListDropped)="drop($event)">
-                    <div class="coolJob-box" *ngFor="let item of two" cdkDrag> <h3>{{item.title}}</h3>
+                    <div class="coolJob-box" *ngFor="let item of five" cdkDrag> <h3>{{item.title}}</h3>
                         <p>{{item.content}}</p></div>
                 </div>
-                <div cdkDropList #twoList="cdkDropList" [cdkDropListData]="two"
-                [cdkDropListConnectedTo]="[oneList,AllInList]" [cdkDropListEnterPredicate]="TwoPredicate"
+                <div cdkDropList #sixList="cdkDropList" [cdkDropListData]="six"
+                [cdkDropListConnectedTo]="[AllInList,oneList,twoList,threeList,fourList,fiveList,sixList]" [cdkDropListEnterPredicate]="SixPredicate"
                 class="coolJob-list" (cdkDropListDropped)="drop($event)">
-                <div class="coolJob-box" *ngFor="let item of two" cdkDrag> <h3>{{item.title}}</h3>
+                <div class="coolJob-box" *ngFor="let item of six" cdkDrag> <h3>{{item.title}}</h3>
                     <p>{{item.content}}</p></div>
             </div>
             </div>
@@ -89,7 +89,7 @@
             <h2>ALL</h2>
 
             <div cdkDropList #AllInList="cdkDropList" [cdkDropListData]="AllIn"
-                [cdkDropListConnectedTo]="[oneList,twoList]" class="coolJob-list" (cdkDropListDropped)="drop($event)">
+                [cdkDropListConnectedTo]="[oneList,twoList,threeList,fourList,fiveList,sixList]" class="coolJob-list" (cdkDropListDropped)="drop($event)">
                 <div class="coolJob-box" *ngFor="let item of AllIn" cdkDrag>
                     <h3>{{item.title}}</h3>
                     <p>{{item.content}}</p>
