--- a/src/app/cool-job/cool-job.component.scss
+++ b/src/app/cool-job/cool-job.component.scss
@@ -63,7 +63,7 @@ p {
 }
 
 .modal {
-  position: relative;
+  // position: relative;
   padding: 16px;
   background-color: #fff;
   border-radius: 3px;
