--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-header></app-header>
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
-<app-cool-job></app-cool-job>
 
 
 
