--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <h1>404 page-not-found works!</h1>
-<h2>下面是暫時測試的</h2>
+<!-- <h2>下面是暫時測試的</h2>
 
 
 <div class="container">
@@ -44,6 +44,6 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <app-cool-job></app-cool-job>
