--- a/src/app/cool-job/cool-job.component.html
+++ b/src/app/cool-job/cool-job.component.html
@@ -1,4 +1,3 @@
-
 <div class="middle-line"></div>
 <h1>cool-job works!</h1>
 
@@ -6,56 +5,66 @@
   <h2>ALL</h2>
 
   <div
-      cdkDropList
-      #AllInList="cdkDropList"
-      [cdkDropListData]="AllIn"
-      [cdkDropListConnectedTo]="[oneList,twoList]"
-      class="coolJob-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="coolJob-box" *ngFor="let item of AllIn" cdkDrag>{{item}}</div>
+    cdkDropList
+    #AllInList="cdkDropList"
+    [cdkDropListData]="AllIn"
+    [cdkDropListConnectedTo]="[oneList, twoList]"
+    class="coolJob-list"
+    (cdkDropListDropped)="drop($event)"
+  >
+    <div class="coolJob-box" *ngFor="let item of AllIn" cdkDrag>{{ item }}</div>
   </div>
-  </div>
-
+</div>
 
 <div class="coolJob-container">
-    <h2>一</h2>
+  <h2>一</h2>
 
-    <div
-      cdkDropList
-      #oneList="cdkDropList"
-      [cdkDropListData]="one"
-      [cdkDropListConnectedTo]="[AllInList,twoList]"
-      [cdkDropListEnterPredicate]="OnePredicate"
-
-      class="coolJob-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="coolJob-box" *ngFor="let item of one" cdkDrag>{{item}}</div>
-    </div>
+  <div
+    cdkDropList
+    #oneList="cdkDropList"
+    [cdkDropListData]="one"
+    [cdkDropListConnectedTo]="[AllInList, twoList]"
+    [cdkDropListEnterPredicate]="OnePredicate"
+    class="coolJob-list"
+    (cdkDropListDropped)="drop($event)"
+  >
+    <div class="coolJob-box" *ngFor="let item of one" cdkDrag>{{ item }}</div>
   </div>
+</div>
 
 <div class="coolJob-container">
-<h2>二</h2>
+  <h2>二</h2>
 
-<div
+  <div
     cdkDropList
     #twoList="cdkDropList"
     [cdkDropListData]="two"
-    [cdkDropListConnectedTo]="[oneList,AllInList]"
+    [cdkDropListConnectedTo]="[oneList, AllInList]"
     [cdkDropListEnterPredicate]="TwoPredicate"
-
     class="coolJob-list"
-    (cdkDropListDropped)="drop($event)">
-    <div class="coolJob-box" *ngFor="let item of two" cdkDrag>{{item}}</div>
-</div>
+    (cdkDropListDropped)="drop($event)"
+  >
+    <div class="coolJob-box" *ngFor="let item of two" cdkDrag>{{ item }}</div>
+  </div>
 </div>
 
 <!-- <button (click)="onClick()" >顯示資料</button> -->
-<button (click)="visinfo()" >顯示資料</button>
+<button (click)="visinfo()">顯示資料</button>
 
 <ng-template #tpl>
-  <p>123333333333</p>
-  <div class="modal">
-    <i class="modal__close" (click)="onClose()">X</i>
-    <div class="modal__container">HI 我是彈出視窗內容</div>
+  <div class="overlaybox px-4 py-4">
+    <img class="my-5" src="assets/images/correct_icon.svg" alt="" />
+    <button type="button" class="d-flex btn btn-outline-secondary px-5">
+      <a routerLink="/pd-backlog">恭喜技能 GET！</a>
+    </button>
+  </div>
+</ng-template>
+
+<ng-template #tplFalse>
+  <div class="overlaybox px-4 py-4">
+    <img class="my-5" src="assets/images/wrong_icon.svg" alt="" />
+    <button type="button" class="d-flex btn btn-outline-secondary px-5">
+      <a routerLink="/week-flow">再看一次觀念</a>
+    </button>
   </div>
 </ng-template>
