--- a/src/app/page1-intro/page1-intro.component.html
+++ b/src/app/page1-intro/page1-intro.component.html
@@ -1,11 +1,3 @@
-<!-- 以下測試內容 -->
-<p>page1-intro works!</p>
-<button routerLink="/week-flow" class="btn-round" type="button">
-  驗收觀念
-</button>
-
-<!-- 測試內容end -->
-
 <!-- 以下正式內容 -->
 <div class="container">
   <div class="mainArea mx-5 px-4 py-4 my-5">
@@ -68,7 +60,7 @@
     </div>
 
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn-outline-secondary px-4">
+      <button routerLink="/week-flow" type="button" class="btn btn-outline-secondary px-4">
         驗收觀念
       </button>
     </div>
