--- a/src/app/page3-pd-backlog/page3-pd-backlog.component.html
+++ b/src/app/page3-pd-backlog/page3-pd-backlog.component.html
@@ -1,10 +1,3 @@
-<!-- 以下測試內容 -->
-<p>page3-pd-backlog works!</p>
-<button routerLink="/pd-flow" class="btn-round" type="button">驗收觀念</button>
-
-<!-- 測試內容end -->
-
-<!-- 以下正式內容 -->
 <div class="container">
   <div class="mainArea mx-5 my-5 px-4 py-4">
     <p class="mb-3">產品待辦清單（Product Backlog）</p>
@@ -36,7 +29,7 @@
       </div>
     </div>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn-outline-secondary px-4">
+      <button routerLink="/pd-flow" type="button" class="btn btn-outline-secondary px-4">
         驗收觀念
       </button>
     </div>
