--- a/src/app/page5-retro/page5-retro.component.html
+++ b/src/app/page5-retro/page5-retro.component.html
@@ -1,12 +1,3 @@
-<!-- 以下測試內容 -->
-<p>page5-retro works!</p>
-<button routerLink="/retro-game" class="btn-round" type="button">
-  驗收觀念
-</button>
-
-<!-- 測試內容end -->
-
-<!-- 以下正式內容 -->
 <div class="container">
   <div class="mainArea mx-5 my-5 px-4 py-4">
     <p class="mb-3">Retrospective Meeting 的精神！</p>
@@ -50,7 +41,7 @@
 
 
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-      <button type="button" class="btn btn-outline-secondary px-4">
+      <button routerLink="/retro-game" type="button" class="btn btn-outline-secondary px-4">
         驗收觀念
       </button>
     </div>
