--- a/src/app/page2-week-flow/page2-week-flow.component.scss
+++ b/src/app/page2-week-flow/page2-week-flow.component.scss
@@ -1,20 +1,18 @@
   
   .coolJob-list {
- 
+    margin-bottom: 8px;
 
   }
   
   .coolJob-box {
     padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     box-sizing: border-box;
     cursor: move;
-    background: white;
+    max-width: 300px;
     font-size: 14px;
   }
   
@@ -24,6 +22,24 @@
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
                 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+                padding: 12px 16px;
+                gap: 8px;
+                background: #83d1fd;
+                border-radius: 4px;
+                text-align: center;
+                color: #0d4b6f;
+                font-family: "Noto Sans TC";
+                line-height: 24px;
+                p:nth-child(1) {
+                  font-weight: 900;
+                  font-size: 14px;
+                }
+            
+                p:nth-child(2) {
+                  font-weight: 400;
+                  font-size: 12px;
+                  line-height: 15px;
+                }
   }
   
   .cdk-drag-placeholder {
@@ -51,6 +67,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 
 
     p{
@@ -65,7 +82,7 @@
         height:inherit ;
         overflow: hidden;
         display: block;
-        margin-bottom: 8px;
+        
     }
 }
 
@@ -74,4 +91,20 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
+
+
+
+
+}
+
+
+.item-group{
+  
+  min-height: 30px;
+  
+
+
+
+  div{margin:5px}
+  
 }
