--- a/src/scss/_public.scss
+++ b/src/scss/_public.scss
@@ -1,14 +1,14 @@
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
   margin: 0;
   font-family: "M PLUS Rounded 1c", sans-serif;
   background-image: url(../assets/images/background_design.svg);
-  background-repeat: no-repeat;
-  background-size: 100%;
+  background-repeat: no-repeat cov;
+  background-size: cover;
 }
 
 .btn {
@@ -20,58 +20,54 @@ body {
   border: 1px solid transparent;
   padding: 12px 32px;
   cursor: pointer;
-  background: radial-gradient(104.16% 106.67% at 50% 0%,
-      #fe9b4b 0%,
-      #f47814 100%);
+  background: radial-gradient(
+    104.16% 106.67% at 50% 0%,
+    #fe9b4b 0%,
+    #f47814 100%
+  );
   box-shadow: 0px 4px 8px rgba(255, 115, 0, 0.28);
   border-radius: 8px;
-
 }
-
 
 //
 // Base styles
 //
 
 .btn {
-
   font-family: $btn-font-family;
   font-weight: $btn-font-weight;
   line-height: $btn-line-height;
   color: $body-color;
-
-
 
   &:hover {
     color: $body-color;
     transform: scale(1.05);
   }
 
-  .btn-check:focus+&,
+  .btn-check:focus + &,
   &:focus {
     outline: 0;
     box-shadow: 0px 4px 8px rgba(255, 115, 0, 0.28);
   }
 
-  .btn-check:checked+&,
-  .btn-check:active+&,
+  .btn-check:checked + &,
+  .btn-check:active + &,
   &:active,
   &.active {
     transform: scale(1);
 
-
-    &:focus {}
+    &:focus {
+    }
   }
 
   &:disabled,
   &.disabled,
-  fieldset:disabled & {}
+  fieldset:disabled & {
+  }
 }
 
-
 .btn-primary {
-
-  background: radial-gradient(125% 125% at 85.42% 0%, #85D3FF 0%, #2596D7 100%);
+  background: radial-gradient(125% 125% at 85.42% 0%, #85d3ff 0%, #2596d7 100%);
   box-shadow: 0px 4px 8px rgba(37, 150, 215, 0.28);
 
   &:hover {
@@ -87,29 +83,20 @@ body {
     border-color: transparent;
     box-shadow: 0 0 0 0rem;
   }
-
 }
 
 .btn-secondary {
-
-
-
-  background: #D8D8D8;
+  background: #d8d8d8;
   color: #737373;
   box-shadow: 0px 4px 8px rgba(160, 160, 160, 0.28);
-
 
   &:hover,
   &:active,
   &:focus,
   &:active:focus {
-    background: #D8D8D8;
+    background: #d8d8d8;
     color: #737373;
     box-shadow: 0px 4px 8px rgba(160, 160, 160, 0.28);
     border: transparent;
-
-
   }
-
-
 }
