1128 image reference changed

--- a/src/app/page1-intro/page1-intro.component.html
+++ b/src/app/page1-intro/page1-intro.component.html
@@ -30,27 +30,27 @@
         一個階段性未達成目標的工作期間，又稱為一次「短衝」，取意自「衝刺」的意思，通常為
         1 - 2 週
       </p>
-      <img src="/assets/images/white_arrow_horizon.svg" alt="" />
+      <img src="./assets/images/white_arrow_horizon.svg" alt="" />
     </div>
     <div class="mb-4">
       <p class="mb-3">參與人員</p>
       <div class="row participant_card_wrap px-4">
         <div class="col mx-4 d-flex">
-          <img src="/assets/images/peer_icon.svg" alt="" />
+          <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Product Owner</p>
             <p>產品經理、總負責人</p>
           </div>
         </div>
         <div class="col mx-4 d-flex">
-          <img src="/assets/images/peer_icon.svg" alt="" />
+          <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Scrum Master</p>
             <p>實踐 Scrum 流程的總教練</p>
           </div>
         </div>
         <div class="col mx-4 d-flex">
-          <img src="/assets/images/peer_icon.svg" alt="" />
+          <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Development Team</p>
             <p>開發人員、設計、QA 等執行人員</p>
