--- a/src/app/page4-pd-flow/page4-pd-flow.component.html
+++ b/src/app/page4-pd-flow/page4-pd-flow.component.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-3 px-4 imgArea">
                     <p>最優先</p>
-                    <img src="../assets/images/priority_arrow.svg" alt="" />
+                    <img src="./assets/images/priority_arrow.svg" alt="" />
                 </div>
 
                 <!-- 先搬過來看看 -->
