--- a/src/app/page5-retro/page5-retro.component.html
+++ b/src/app/page5-retro/page5-retro.component.html
@@ -8,21 +8,21 @@
       <p class="mb-3">參與人員</p>
       <div class="row participant_card_wrap px-4">
         <div class="col mx-4 d-flex">
-          <img src="/assets/images/peer_icon.svg" alt="" />
+          <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Product Owner</p>
             <p>產品經理、總負責人</p>
           </div>
         </div>
         <div class="col mx-4 d-flex">
-          <img src="/assets/images/peer_icon.svg" alt="" />
+          <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Scrum Master</p>
             <p>實踐 Scrum 流程的總教練</p>
           </div>
         </div>
         <div class="col mx-4 d-flex">
-          <img src="/assets/images/peer_icon.svg" alt="" />
+          <img src="./assets/images/peer_icon.svg" alt="" />
           <div class="text_wrap">
             <p>Development Team</p>
             <p>開發人員、設計、QA 等執行人員</p>
@@ -34,7 +34,7 @@
   <div class="mb-5">
     <p class="mb-3">推薦工具</p>
     <div class="col d-flex justify-content-center">
-      <img src="/assets/images/confluence.svg" alt="">
+      <img src="./assets/images/confluence.svg" alt="">
     </div>
 
   </div>
