--- a/src/app/page3-pd-backlog/page3-pd-backlog.component.html
+++ b/src/app/page3-pd-backlog/page3-pd-backlog.component.html
@@ -11,7 +11,7 @@
         <p class="mb-3">主要負責人員</p>
         <div class="col-6 participant_card_wrap">
           <div class="d-flex">
-            <img src="/assets/images/peer_icon.svg" alt="" />
+            <img src="./assets/images/peer_icon.svg" alt="" />
             <div class="text_wrap">
               <p>Product Owner</p>
               <p>產品經理、總負責人</p>
@@ -23,7 +23,7 @@
         <p class="mb-3">推薦工具</p>
         <img
           class="mt-3"
-          src="/assets/images/atlassian-jira-logo-large 1.svg"
+          src="./assets/images/atlassian-jira-logo-large 1.svg"
           alt=""
         />
       </div>
