--- a/src/app/page6-retro-game/page6-retro-game.component.html
+++ b/src/app/page6-retro-game/page6-retro-game.component.html
@@ -38,8 +38,7 @@
         <label class="doingbetter_card" for="place2" name="single">
           <input name="op2" class="radio" id="place2" type="radio" checked="checked"/>
           <span class="plan-details" aria-hidden="true">
-            <span class="plan-type"
-              >可以記錄這次的開發時間，讓下次協作的時候，可以作為預估deadline的依據！</span
+            <span class="plan-type">可以記錄這次的開發時間，讓下次協作的時候，可以作為預估deadline的依據！</span
             >
           </span>
         </label>
