--- a/src/app/page6-retro-game/page6-retro-game.component.html
+++ b/src/app/page6-retro-game/page6-retro-game.component.html
@@ -46,10 +46,9 @@
     </div>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
       <button
-
+        routerLink="/the-end"
         type="button"
         class="btn btn-outline-secondary px-4"
-        onclick="sendMsg()"
       >
         驗收觀念
       </button>
@@ -57,3 +56,5 @@
   </div>
 </div>
 <!-- routerLink="/the-end" -->
+
+<!-- onclick="sendMsg()" -->
