--- a/src/app/page2-week-flow/page2-week-flow.component.html
+++ b/src/app/page2-week-flow/page2-week-flow.component.html
@@ -107,13 +107,30 @@
         <!-- 按鈕 -->
         <div class="mb-3">
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button routerLink="/pd-backlog" type="button" class="btn btn-outline-secondary btn-lg px-4">
-                    送出答案
-                </button>
                 <button (click)="visinfo()" type="button" class="btn btn-outline-secondary btn-lg px-4">
-                    顯示
+                    送出答案
                 </button>
             </div>
         </div>
     </div>
 </div>
+
+
+
+<ng-template #tpl>
+    <div class="overlaybox px-4 py-4">
+      <img class="my-5" src="./assets/images/correct_icon.svg" alt="" />
+      <button type="button" class="d-flex btn btn-outline-secondary px-5">
+        <a routerLink="/pd-backlog">恭喜技能 GET！</a>
+      </button>
+    </div>
+  </ng-template>
+  
+  <ng-template #tplFalse>
+    <div class="overlaybox px-4 py-4">
+      <img class="my-5" src="assets/images/wrong_icon.svg" alt="" />
+      <button type="button" class="d-flex btn btn-outline-secondary px-5">
+        <a routerLink="/intro">再看一次觀念</a>
+      </button>
+    </div>
+  </ng-template>
