--- a/src/app/page4-pd-flow/page4-pd-flow.component.html
+++ b/src/app/page4-pd-flow/page4-pd-flow.component.html
@@ -67,10 +67,29 @@
 
             </div>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button routerLink="/retro" type="button" class="btn btn-outline-secondary btn-lg px-4">
+                <button (click)="visinfo()" type="button" class="btn btn-outline-secondary btn-lg px-4">
                     送出答案
                 </button>
             </div>
         </div>
     </div>
 </div>
+
+
+<ng-template #tpl>
+    <div class="overlaybox px-4 py-4">
+      <img class="my-5" src="./assets/images/correct_icon.svg" alt="" />
+      <button type="button" class="d-flex btn btn-outline-secondary px-5">
+        <a routerLink="/retro">恭喜技能 GET！</a>
+      </button>
+    </div>
+  </ng-template>
+  
+  <ng-template #tplFalse>
+    <div class="overlaybox px-4 py-4">
+      <img class="my-5" src="assets/images/wrong_icon.svg" alt="" />
+      <button type="button" class="d-flex btn btn-outline-secondary px-5">
+        <a routerLink="/pd-backlog">再看一次觀念</a>
+      </button>
+    </div>
+  </ng-template>
