--- a/src/app/page6-retro-game/page6-retro-game.component.html
+++ b/src/app/page6-retro-game/page6-retro-game.component.html
@@ -55,6 +55,21 @@
     </div>
   </div>
 </div>
-<!-- routerLink="/the-end" -->
 
-<!-- onclick="sendMsg()" -->
+<ng-template #tpl>
+    <div class="overlaybox px-4 py-4">
+      <img class="my-5" src="./assets/images/correct_icon.svg" alt="" />
+      <button type="button" class="d-flex btn btn-outline-secondary px-5">
+        <a routerLink="/the-end">恭喜技能 GET！</a>
+      </button>
+    </div>
+  </ng-template>
+
+  <ng-template #tplFalse>
+    <div class="overlaybox px-4 py-4">
+      <img class="my-5" src="assets/images/wrong_icon.svg" alt="" />
+      <button type="button" class="d-flex btn btn-outline-secondary px-5">
+        <a routerLink="/retro">再看一次觀念</a>
+      </button>
+    </div>
+  </ng-template>
