--- a/src/app/page6-retro-game/page6-retro-game.component.html
+++ b/src/app/page6-retro-game/page6-retro-game.component.html
@@ -5,16 +5,15 @@
     <div class="mb-5 round-1">
       <p class="mb-4">做得好的地方</p>
       <div class="doingbetter_card_wrap">
-        <label class="doingbetter_card" for="place1" name="single" >
-
-          <input name="op1" id="place1" class="radio" type="radio"  />
+        <label class="doingbetter_card" for="place1">
+          <input id="place1" name="op1" value="0" class="radio" type="radio"  />
           <span class="plan-details">
             <span class="plan-type">這次我幫了很多人救火耶</span>
           </span>
         </label>
 
-        <label class="doingbetter_card" for="place1" name="single">
-          <input name="op1" class="radio" id="place1" type="radio" checked="checked" />
+        <label class="doingbetter_card" for="place1">
+          <input id="place2" name="op1" value="1" class="radio" type="radio" checked="true"/>
           <span class="plan-details" aria-hidden="true">
             <span class="plan-type"
               >大家在開發上都會互相 cover，讓進度如期完成！</span
@@ -23,11 +22,12 @@
         </label>
       </div>
     </div>
+
     <div class="mb-5 round-2">
       <p class="mb-3">有哪些可以做得更好</p>
       <div class="doingbetter_card_wrap">
         <label class="doingbetter_card" for="place2" name="single">
-          <input name="op2" class="radio" id="place2" type="radio" />
+          <input name="op2" class="radio" id="place3" type="radio" />
           <span class="plan-details">
             <span class="plan-type"
               >開發時間拿捏不準確，都是設計出稿出太慢...</span
@@ -36,9 +36,16 @@
         </label>
 
         <label class="doingbetter_card" for="place2" name="single">
-          <input name="op2" class="radio" id="place2" type="radio" checked="checked"/>
+          <input
+            name="op2"
+            class="radio"
+            id="place4"
+            type="radio"
+            checked="true"
+          />
           <span class="plan-details" aria-hidden="true">
-            <span class="plan-type">可以記錄這次的開發時間，讓下次協作的時候，可以作為預估deadline的依據！</span
+            <span class="plan-type"
+              >可以記錄這次的開發時間，讓下次協作的時候，可以作為預估deadline的依據！</span
             >
           </span>
         </label>
@@ -46,7 +53,7 @@
     </div>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
       <button
-        routerLink="/the-end"
+        (click)="visinfo()"
         type="button"
         class="btn btn-outline-secondary px-4"
       >
@@ -57,14 +64,13 @@
 </div>
 
 <ng-template #tpl>
-    <div class="overlaybox px-4 py-4">
-      <img class="my-5" src="./assets/images/correct_icon.svg" alt="" />
-      <button type="button" class="d-flex btn btn-outline-secondary px-5">
-        <a routerLink="/the-end">恭喜技能 GET！</a>
-      </button>
-    </div>
-  </ng-template>
-
+  <div class="overlaybox px-4 py-4">
+    <img class="my-5" src="./assets/images/correct_icon.svg" alt="" />
+    <button type="button" class="d-flex btn btn-outline-secondary px-5">
+      <a routerLink="/the-end">恭喜技能 GET！</a>
+    </button>
+  </div>
+</ng-template>
   <ng-template #tplFalse>
     <div class="overlaybox px-4 py-4">
       <img class="my-5" src="assets/images/wrong_icon.svg" alt="" />
