--- a/src/app/page6-retro-game/page6-retro-game.component.html
+++ b/src/app/page6-retro-game/page6-retro-game.component.html
@@ -6,6 +6,8 @@
       <p class="mb-4">做得好的地方</p>
       <div class="doingbetter_card_wrap">
         <label class="doingbetter_card" for="place1">
+          <!-- input 相同的name可以串成同一個群組 -->
+
           <input id="place1" name="op1" class="radio" type="radio" />
 
           <span class="plan-details">
@@ -14,6 +16,8 @@
         </label>
 
         <label class="doingbetter_card" for="place1">
+          <!-- input 相同的name可以串成同一個群組 -->
+
           <input
             id="place2"
             name="op1"
@@ -34,7 +38,9 @@
     <div class="mb-5 round-2">
       <p class="mb-3">有哪些可以做得更好</p>
       <div class="doingbetter_card_wrap">
-        <label class="doingbetter_card" for="place3" >
+        <label class="doingbetter_card" for="place3">
+          <!-- input 相同的name可以串成同一個群組 -->
+
           <input name="op2" class="radio" id="place3" type="radio" />
           <span class="plan-details">
             <span class="plan-type"
@@ -44,6 +50,7 @@
         </label>
 
         <label class="doingbetter_card" for="place2" name="single">
+          <!-- input 相同的name可以串成同一個群組 -->
           <input
             name="op2"
             class="radio"
