--- a/src/app/page3-pd-backlog/page3-pd-backlog.component.html
+++ b/src/app/page3-pd-backlog/page3-pd-backlog.component.html
@@ -21,11 +21,13 @@
       </div>
       <div class="col">
         <p class="mb-3">推薦工具</p>
+        <a href="https://www.atlassian.com/software/jira" target="_blank">
         <img
           class="mt-3"
           src="./assets/images/atlassian-jira-logo-large 1.svg"
           alt=""
         />
+      </a>
       </div>
     </div>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
