--- a/src/app/page5-retro/page5-retro.component.html
+++ b/src/app/page5-retro/page5-retro.component.html
@@ -34,7 +34,9 @@
   <div class="mb-5">
     <p class="mb-3">推薦工具</p>
     <div class="col d-flex justify-content-center">
+      <a href="https://www.atlassian.com/software/confluence" target="_blank">
       <img src="./assets/images/confluence.svg" alt="">
+    </a>
     </div>
 
   </div>
