--- a/src/app/page4-pd-flow/page4-pd-flow.component.scss
+++ b/src/app/page4-pd-flow/page4-pd-flow.component.scss
@@ -78,7 +78,8 @@
 
 
     div{
-        width: 100%;
+        // width: 100%;
+        min-width: 250px;
         min-height:7rem ;
         height:inherit ;
         overflow: hidden;
